# MedLingo

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: inference_config.yaml  model_config.yaml  training_config.yaml
medlingo/: __init__.py
medlingo/agents/: __init__.py
medlingo/core/: __init__.py  adjudicator.py  projection_bridges.py  router.py  specialist.py  uncertainty.py  vision_encoder.py
medlingo/data/: __init__.py  loaders.py  preprocessing.py
medlingo/inference/: __init__.py  cli.py  engine.py
medlingo/pipeline/: __init__.py  medlingo_pipeline.py  parallel_executor.py  spr.py
medlingo/training/: __init__.py  stage1_alignment.py  stage2_specialist.py  stage3_router.py  stage4_dpo.py  train_pipeline.py
medlingo/utils/: __init__.py  logging_utils.py  memory_manager.py  model_registry.py  quantization.py
scripts/: evaluate.py  infer.sh  train.sh
tests/: test_core.py  test_pipeline.py
