[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "medlingo"
version = "1.0.0"
description = "Resource-Efficient Hierarchical Multi-Agent Intelligence for Autonomous Clinical and Robotic Diagnostics"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sarmad Sultan" },
    { name = "Muhammad Sami Ullah" },
    { name = "Ahmad Jan" },
    { name = "Muhammad Dawood Rizwan" },
    { name = "Muhammad Naseer Bajwa" },
    { name = "Muhammad Moazam Fraz" },
]
keywords = [
    "medical AI", "multi-agent", "vision-language models",
    "clinical diagnostics", "LoRA", "DPO", "BioMedCLIP",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.10"

dependencies = [
    # Core deep learning
    "torch>=2.2.0",
    "torchvision>=0.17.0",

    # HuggingFace ecosystem
    "transformers>=4.44.0",
    "datasets>=2.19.0",
    "accelerate>=0.30.0",
    "peft>=0.11.0",
    "trl>=0.9.0",
    "tokenizers>=0.19.0",
    "huggingface-hub>=0.23.0",

    # Quantization
    "bitsandbytes>=0.43.0",

    # Vision
    "Pillow>=10.3.0",
    "open-clip-torch>=2.24.0",

    # FlashAttention (installed separately if CUDA present)
    # "flash-attn>=2.5.0",  # Install manually: pip install flash-attn --no-build-isolation

    # Utilities
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",

    # Evaluation
    "bert-score>=0.3.13",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
]
wandb = [
    "wandb>=0.17.0",
]

[project.scripts]
medlingo-train = "medlingo.training.train_pipeline:main"
medlingo-infer = "medlingo.inference.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["medlingo*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
